--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "eslint-config-next": "13.2.4",
     "gsap": "^3.11.5",
     "next": "13.2.4",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.1",
+    "react-scroll": "^1.8.9",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
